Name:                hstter
Version:             0.1.0.0
Synopsis:            Twitter Client written in Haskell
Description:         Twitter Client written in Haskell
Homepage:            https://github.com/krdlab/hs-twitter-client
License:             MIT
License-file:        LICENSE
Author:              KrdLab
Maintainer:          krdlab@gmail.com
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.2

Executable hstter
  Main-is:          Main.hs
  Build-depends:    base                    == 4.*
                  , time                    == 1.4.0.1
                  , old-locale
                  , bytestring              == 0.9.*
                  , text                    == 0.11.1.*
                  , utf8-string
                  , transformers
                  , conduit
                  , http-conduit            == 1.4.1.3
                  , attoparsec-conduit      == 0.4.0.1
                  , authenticate-oauth      == 1.3.0
                  , aeson                   == 0.6.0.2
                  , MissingH
                  , ConfigFile              == 1.1.1
  Ghc-options:      -Wall

Source-repository head
  Type:           git
  Location:       git://github.com/krdlab/hs-twitter-client.git
